out/old/manifests/argocd/NetworkPolicy.argocd-repo-server-network-policy.yaml
metadata:
  name: argocd-repo-server-network-policy
  namespace: argocd
  labels:
    app.kubernetes.io/instance: argocd
  annotations: {}
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: argocd-repo-server
  ingress:
  - ports:
    - protocol: TCP
      port: 8081
    from:
    - podSelector:
        matchLabels:
          app.kubernetes.io/name: argocd-server
    - podSelector:
        matchLabels:
          app.kubernetes.io/name: argocd-application-controller
    - podSelector:
        matchLabels:
          app.kubernetes.io/name: argocd-notifications-controller
  - ports:
    - protocol: TCP
      port: 8084
    from:
    - namespaceSelector: {}
  policyTypes:
  - Ingress
apiVersion: <DOMAIN_775>/v1
kind: NetworkPolicy
